<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>
    <string name="menu_home"> </string>
    <string name="app_name">Paztoral</string>
    <string name="signin">Iniciar sesión</string>
    <string name="signout">Terminar sesión</string>
    <string name="share">Compartir esta aplicación</string>
    <string name="button1">La violencia: introducción</string>
    <string name="button2">Violencia en la pareja</string>
    <string name="button3">Maltrato infantil</string>
    <string name="button4">Solución de conflictos</string>
    <string name="button5">Crianza positiva</string>
    <string name="button6">Recursos bíblicos</string>
    <string name="button7">Denunciando la violencia</string>
    <string name="button8">[otro]</string>
    <string name="b1_1">Lo que la violencia no es</string>
    <string name="b1_2">El concepto de violencia</string>
    <string name="b1_3">Tipos de violencia</string>
    <string name="b1_4">Recursos bíblicos</string>
    <string name="b1_5">Ideas pastorales contra la violencia</string>
    <string name="b1_6">Evaluación</string>
    <string name="b2_1">Conflicto y violencia</string>
    <string name="b2_2">El ciclo de la violencia en la pareja</string>
    <string name="b2_3">Violencia y sujeción de la mujer</string>
    <string name="b2_4">Ideas pastorales contra la violencia</string>
    <string name="b2_5">Evaluación</string>
    <string name="b3_1">Causas del maltrato infantil</string>
    <string name="b3_2">El castigo físico como forma del maltrato</string>
    <string name="b1_0text">La violencia no es algo que ocurre solo en las noticias. Es más frecuente
        de lo que creemos. Sin embargo, para combatirla es necesario saber identificarla. En esta
        sesión aprenderás qué es la violencia, cómo ella actúa en las relaciones familiares, qué
        nos dice la Biblia sobre ella y algunos consejos pastorales para combatirla.</string>
    <string name="b1_1text">La violencia <b><u>no es</u></b> una cuestión de <b>percepción</b>. Es un
        error pensar que la violencia es un concepto relativo, que depende de la percepción o
        susceptibilidad de las personas. De ser así, para unos gritar sería solo “alzar la voz”, o
        acosar sería lanzar un “piropo”. No es así. <b>La violencia es un concepto preciso</b>.
        \n\nLa violencia <b><u>no es</u></b> el <b>uso de la fuerza para defendernos</b>. A veces
        una persona puede dañar a otra en defensa propia. Por ejemplo, una mujer puede arañar al
        esposo que intenta golpearla. Solo por haberlo arañado no puede decirse que ella fue
        violencia. Hay que tener cuidado de no culpabilizar a la víctima. Usar la fuerza en defensa
        propia no es violencia, sino <b>agresión</b>.</string>
    <string name="b1_2text">La violencia es toda conducta que <b><u>daña</u></b> o amenaza con dañar a
        otras personas a través del <b><u>abuso de poder</u></b>.
        \n\nExiste daño cuando limitamos cualquier cosa que las personas son capaces de hacer. Por
        ejemplo: que puedan moverse, expresarse libremente, sentirse bien consigo mismas, decidir
        por sí mismas. Es posible identificar el daño a través del dolor o sentimiento de malestar
        de la persona.
        \n\nExiste <b>abuso de poder</b> cuando una persona usa <i>su posición de dominio</i> para
        <i>dejarlas decidir por sí mismas</i> su voluntad sobre otras y no <u>imponer</u>
        (autonomía). La posición de dominio es toda situación que pone al agresor en una posición de
        ventaja frente a la víctima. Por ejemplo: mayor fuerza física, mayor edad, tener una
        posición de autoridad, mayor conocimiento, mayor prestigio, gozar de la confianza de la
        víctima, etc.). La posición de dominio se impone cuando no se da a la otra persona la
        posibilidad de sentir, pensar o decidir sobre
        \n\nEs importante que como agentes pastorales aprendamos no solo a identificar el daño en
        las víctimas, sino también el abuso de poder de los agresores.</string>
    <string name="b1_3text">Saber que la violencia es un daño y un abuso de poder nos capacita para
        identificar cualquier tipo de conducta violenta. Sin embargo, los “tipos de violencia” son
        clasificaciones útiles que nos ayudan a identificar las violencias más cotidianas, sobre
        todo en el ámbito de la familia.</string>
    <string name="b1_3T11">Física</string>
    <string name="b1_3T12">Psicológica</string>
    <string name="b1_3T13">Sexual</string>
    <string name="b1_3T14">Económica</string>
    <string name="b1_3T21">Golpes, tirones de pelo, pellizcos, empujones, se lanzan objetos o hay
        amenazas con objetos o armas.</string>
    <string name="b1_3T22">&#8226; Maltrato verbal (insultos, comentarios que humillan, alzar la
        voz, gritar o hacer gestos que intimidantes, etc.).
        \n&#8226; Maltrato emocional (mentir persistentemente, no dar explicaciones de nada, culpar
        al otro de todo lo que sucede, ignorar la presencia del otro).
        \n&#8226; Tácticas de presión (manipular, chantajear, hacer amenazas)
        \n&#8226; Faltas de respeto (interrumpir, no escuchar, no responder, no respetar sus
        opiniones, manipular el sentido de las palabras)
        \n&#8226; Situaciones de control (impide que la persona salga, invade la intimidad, muestra
        celos, controla correos y llamadas, escucha conversaciones telefónicas, etc.).</string>
    <string name="b1_3T23">&#8226; Se manipula a la pareja o se le insiste para tener relaciones
        sexuales.
        \n&#8226; Se le fuerza a tener relaciones sexuales contra su voluntad
        \n&#8226; Se le obliga a no usar algún método anticonceptivo, etc.</string>
    <string name="b1_3T24">Se niega a otro miembro de la familia el acceso a los recursos que
        permiten satisfacer sus necesidades. Por ejemplo: no apoyar económicamente el hogar,
        restringir el acceso al dinero o a las cuentas, destruir los bienes materiales de la otra
        persona, etc.</string>
    <string name="b1_4text">¿Qué dice la Biblia sobre el concepto de violencia?\n\n
        En las Escrituras se establece el deber de amar al prójimo lo que implica, entre otras
        cosas, el deber de <b>no dañarlo</b>:
        \n\n“<i>No debáis a nadie nada, sino el amaros unos a otros; porque el que ama al prójimo,
        ha cumplido la ley. Porque: No adulterarás, no matarás, no hurtarás, no dirás falso
        testimonio, no codiciarás, y cualquier otro mandamiento, en esta sentencia se resume: Amarás
        a tu prójimo como a ti mismo. El amor no hace mal al prójimo; así que el cumplimiento de la
        ley es el amor.</i>” (Romanos 13:8-10).
        \n\nAdemás, en la Biblia, específicamente en el Antiguo Testamento, la violencia es
        concebida como un abuso de poder. La palabra hebrea que en nuestras Biblias se traduce como
        “violencia” es “JâMâS” (que aparece 60 veces en el AT). Lo interesante es que siempre que el
        Antiguo Testamento usa “JâMâS” lo hace para referirse al daño producido por unos más
        poderosos que otros. “Los agentes de JâMâS son siempre los opresores, los poderosos y
        privilegiados (Am 3:10; Miq 6.11-12; Ezq 7.11,19,23-34.). En el uso hebreo, aunque nos
        parezca extraño, no se habla de JâMâS cometido por los pobres y débiles, ni tampoco contra
        los poderosos
        \n\nPor tanto, la Biblia está de acuerdo con definir la violencia como un daño y como un
        abuso de poder.</string>
    <string name="b1_5text"><b>Recomendaciones para la consejería pastoral:</b>
        \n\nLas consejerías por conflictos familiares son frecuentes en la labor pastoral. En estos
        casos, es importante indagar si en la relación familiar existe violencia (daño y abuso de
        poder). En caso sea así, se recomienda:
        \n\n&#8226; Identificar quién es la víctima y quién es el agresor, a fin de ofrecerles a
        ambos ayuda especializada (atención psicológica). La derivación aun psicólogo también debe
        hacerse en caso se haya sufrido violencia en el pasado.
        \n&#8226; Disponer el retiro del agresor del cargo o función de liderazgo eclesial que
        desempeñe, en caso lo tuviese.
        \n&#8226; Cualquier tipo de violencia debe ser denunciada. Se recomienda acompañar a la
        víctima a hacer la denuncia. Tratándose de violencia física y sexual, además de la denuncia,
        se debe disponer la separación física entre el agresor y la víctima para garantizar la
        seguridad de esta última.
        \n&#8226; Si frente a un evidente caso de violencia la víctima no quiere denunciar, puede
        hacerlo el pastor o cualquier miembro de la iglesia. En caso de duda, se puede recurrir a un
        Centro de Emergencia Mujer, quien efectuará un diagnóstico del estado psicológico de la
        víctima.
        \n\n<b>Consejos para prevenir la violencia desde la iglesia:</b>
        \n\n&#8226; Realizar cursos, talleres y capacitaciones acerca de la violencia familiar.
        \n&#8226; Tener protocolos o políticas institucionales para prevenir y atender los casos de
        abuso sexual contra niños y niñas en la iglesia, o los casos de violencia familiar de los
        miembros de la iglesia.
        \n&#8226; Mantener contacto con organizaciones o ministerios que ofrezcan capacitaciones a
        los miembros de la iglesia sobre la violencia familiar.
        \n&#8226; En caso el abusador sea un líder de la iglesia es necesario contar con protocolos
        imparciales para asegurar su denuncia y el cese temporal de sus actividades.
        \n\n<b>Consejos para atender la violencia desde la iglesia:</b>
        \n\nDisponer de un presupuesto para solventar los gastos de las personas violentadas
        (pasajes, medicamentos, terapia psicológica, etc.).
        \n\nDesignar a miembros de la iglesia que puedan acompañar a la víctima de la violencia
        durante todo el proceso de denuncia.
        \n\nDisponer de un espacio especial que sirva como refugio temporal para las personas
        violentadas (si no se puede contar con un albergue, puede ser la casa de un miembro de la
        iglesia).
        \n\n<b>Consejos para atender la violencia en la comunidad:</b>
        \n\n&#8226; Mantener un directorio actualizado con los teléfonos y direcciones de las
        instituciones públicas necesarias para efectuar una denuncia (Juzgado, Fiscalía, Comisaría,
        Centro de Emergencia Mujer).
        \n&#8226; Contar con un equipo de profesionales (pueden ser miembros de la iglesia) a
        quienes puedan derivarse algunos casos (psicólogos, abogados, etc.).
        \n&#8226; La iglesia puede aliarse con otras organizaciones y ministerios que tengan más
        experiencia en la prevención y abordamiento de la violencia, a fin de capacitar a sus
        miembros.
        \n&#8226; Realizar campañas de información y prevención sobre la violencia familiar a la
        comunidad.</string>
    <string name="start">Iniciar</string>
    <string name="confirm">Confirmar</string>
    <string name="b1e">Evaluación</string>
    <string name="b1e_highscore">Puntación mejor: 0</string>
    <string name="b1e_score">Puntación: 0</string>
    <string name="b1e_question_count">Pregunta: 1/10</string>
    <string name="b1e_1"><b>1. Marque la opción correcta:</b></string>
    <string name="b1e_1a">La violencia es una cuestión de percepción, depende si la persona se siente
        ofendida o violentada.</string>
    <string name="b1e_1b">La violencia es lo mismo que la agresión.</string>
    <string name="b1e_1c">La violencia tiene una definición precisa.</string>
    <string name="b1e_1d"></string>
</resources>