<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/test8"
    android:padding="16dp"
    tools:context=".B1EvalActivity">

    <Button
        android:id="@+id/b1e_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/b1e_radio_group"
        android:layout_marginTop="16dp"
        android:text="@string/confirm" />

    <RadioGroup
        android:id="@+id/b1e_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <RadioButton
            android:id="@+id/b1e_rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/b1e_1a" />

        <RadioButton
            android:id="@+id/b1e_rb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/b1e_1b" />

        <RadioButton
            android:id="@+id/b1e_rb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/b1e_1c" />

        <RadioButton
            android:id="@+id/b1e_rb4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/b1e_1d"
            android:visibility="gone" />

    </RadioGroup>

    <TextView
        android:id="@+id/b1e_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/b1e_radio_group"
        android:layout_marginBottom="16dp"
        android:text="@string/b1e_1"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/b1e_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:padding="5dp"
        android:text="@string/b1e_score"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/b1e_question_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/b1e_score"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:padding="5dp"
        android:text="@string/b1e_question_count"
        android:textColor="@android:color/black" />

</RelativeLayout>