<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <Button
        android:id="@+id/button1"
        android:layout_width="165dp"
        android:layout_height="120dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/button1"
        app:layout_constraintStart_toStartOf="@+id/nav_host_fragment"
        app:layout_constraintTop_toTopOf="@id/nav_host_fragment" />

    <Button
        android:id="@+id/button2"
        android:layout_width="165dp"
        android:layout_height="120dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/button2"
        app:layout_constraintEnd_toEndOf="@+id/nav_host_fragment"
        app:layout_constraintTop_toTopOf="@+id/nav_host_fragment" />

    <Button
        android:id="@+id/button3"
        android:layout_width="165dp"
        android:layout_height="120dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/button3"
        app:layout_constraintStart_toStartOf="@id/nav_host_fragment"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button4"
        android:layout_width="165dp"
        android:layout_height="120dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/button4"
        app:layout_constraintEnd_toEndOf="@+id/nav_host_fragment"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button5"
        android:layout_width="165dp"
        android:layout_height="120dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/button5"
        app:layout_constraintStart_toStartOf="@+id/nav_host_fragment"
        app:layout_constraintTop_toBottomOf="@id/button3" />

    <Button
        android:id="@+id/button6"
        android:layout_width="165dp"
        android:layout_height="120dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/button6"
        app:layout_constraintEnd_toEndOf="@+id/nav_host_fragment"
        app:layout_constraintTop_toBottomOf="@id/button4" />

    <Button
        android:id="@+id/button7"
        android:layout_width="165dp"
        android:layout_height="120dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/button7"
        app:layout_constraintStart_toStartOf="@+id/nav_host_fragment"
        app:layout_constraintTop_toBottomOf="@id/button5" />

    <Button
        android:id="@+id/button8"
        android:layout_width="165dp"
        android:layout_height="120dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/button8"
        app:layout_constraintEnd_toEndOf="@+id/nav_host_fragment"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>