<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/b1_Menu01"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/down_arrow"
            android:drawableRight="@drawable/down_arrow"
            android:gravity="start|center_vertical"
            android:padding="20dip"
            android:text="@string/b1_1"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b1_0" />

        <Button
            android:id="@+id/b1_Menu02"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/down_arrow"
            android:drawableRight="@drawable/down_arrow"
            android:gravity="start|center_vertical"
            android:padding="20dip"
            android:text="@string/b1_2"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b1_01" />

        <Button
            android:id="@+id/b1_Menu03"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/down_arrow"
            android:drawableRight="@drawable/down_arrow"
            android:gravity="start|center_vertical"
            android:padding="20dip"
            android:text="@string/b1_3"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b1_02" />

        <Button
            android:id="@+id/b1_Menu04"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/down_arrow"
            android:drawableRight="@drawable/down_arrow"
            android:gravity="start|center_vertical"
            android:padding="20dip"
            android:text="@string/b1_4"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b1_03" />

        <Button
            android:id="@+id/b1_Menu05"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/down_arrow"
            android:drawableRight="@drawable/down_arrow"
            android:gravity="start|center_vertical"
            android:padding="20dip"
            android:text="@string/b1_5"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b1_04" />

        <Button
            android:id="@+id/b1_Menu06"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/down_arrow"
            android:drawableRight="@drawable/down_arrow"
            android:gravity="start|center_vertical"
            android:padding="20dip"
            android:text="@string/b1_6"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b1_05" />

        <RelativeLayout
            android:id="@+id/b1_03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b1_Menu03">

            <TableLayout
                android:id="@+id/b1_03Table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/b1_03Text">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="#000000">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:background="#FFFFFF"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/b1_3T11"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:padding="5dp"
                        android:text="@string/b1_3T21" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="#000000">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:background="#FFFFFF"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/b1_3T12"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:padding="5dp"
                        android:text="@string/b1_3T22" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="#000000">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:background="#FFFFFF"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/b1_3T13"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:padding="5dp"
                        android:text="@string/b1_3T23" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="#000000">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:background="#FFFFFF"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/b1_3T14"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:padding="5dp"
                        android:text="@string/b1_3T24" />
                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/b1_03Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/b1_3text"
                android:padding="10dip" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/b1_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b1_Menu01">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/b1_1text"
                android:padding="10dip" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/b1_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b1_Menu02">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/b1_2text"
                android:padding="10dip"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/b1_04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b1_Menu04">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/b1_4text"
                android:padding="10dip"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/b1_05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b1_Menu05">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/b1_5text"
                android:padding="10dip" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/b1_06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b1_Menu06">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/b1_6text"
                android:padding="10dip" />
        </RelativeLayout>


        <TextView
            android:id="@+id/b1_0"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/b1_0text"
            android:padding="20dip"
            android:textColor="#ff000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>