<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/test8"
    android:padding="16dp"
    tools:context="org.pazyesperanza.paztoral.B1EvalActivityStart">

    <Button
        android:id="@+id/b1e_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:onClick="StartListener"
        android:text="@string/start" />

    <TextView
        android:id="@+id/b1e_highscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/b1e_start"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/b1e_highscore"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/b1e"
        android:textSize="40sp" />


</RelativeLayout>